# pulse

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  example.pulse  temp.js
.github/: CONTRIBUTING.md  funding.yml
cli/: Cargo.toml
cli/lib/: env.cpp  error.cpp  io.cpp  lib.cpp  main.cpp  math.cpp
cli/src/: cpp_compiler.rs  fs.rs  logger.rs  macros.rs  main.rs  time.rs
cli/src/commands/: init.rs  run.rs
core/: Cargo.toml
core/ast/: Cargo.toml
core/ast/src/: position.rs
core/core/: Cargo.toml
core/core/src/: colors.rs  diagnostics.rs  error.rs  lib.rs
core/lexer/: Cargo.toml
core/lexer/src/: lib.rs  stream.rs  token.rs
core/src/: build.rs  global_context.rs  lib.rs  scopes.rs  types.rs
core/src/ast/: expr.rs  function.rs  item.rs  mod.rs  position.rs  span.rs  stmt.rs  visitor.rs
core/src/codegen/: mod.rs  walker.rs
core/src/error/: diagnostics.rs  error.rs  mod.rs
core/src/ir/: interner.rs  mod.rs  passes.rs
core/src/lexer/: mod.rs  stream.rs  token.rs
core/src/parser/: counter.rs  mod.rs
core/src/semantic/: types.rs
lang/: Cargo.toml
lang/src/: logger.rs  main.rs  panic_handler.rs
lang/src/commands/: run.rs
playground/src/: main.pulse
